<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Panier.PanierActivity"
    android:background="@color/fond"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:orientation="vertical"
        android:layout_weight="2">

        <include
            android:id="@+id/nav"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            layout="@layout/nav" />

        <TextView
            android:id="@+id/panierTitre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/nav"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:gravity="center"
            android:text="@string/panier"
            android:textColor="@color/white"
            android:textSize="32sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_panierTemp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/panierTitre"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:text="@string/panierTemporaire"
            android:textColor="@color/gris_pale"
            android:textSize="20sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/panierVide"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:layout_margin="20dp"
            android:gravity="center"
            android:text="@string/panier_vide"
            android:textColor="@color/gris_pale"
            android:textSize="25sp"
            android:textStyle="italic"
            android:visibility="gone"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_panier"
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:layout_below="@+id/txt_panierTemp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"/>
        </ScrollView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottomPanier"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="left|bottom">

        <View
            android:id="@+id/panierLine"
            android:layout_width="150dp"
            android:layout_height="3dp"
            android:layout_marginLeft="20dp"
            android:background="@color/bleu" />

        <TextView
            android:id="@+id/avanttaxe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:paddingTop="3dp"
            android:text="@string/total_brut"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/tpsPanier"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/tps"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/tvqPanier"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/tvq"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/panierTotal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:paddingTop="3dp"
            android:text="@string/total"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:padding="30dp">

            <Button
                android:id="@+id/btn_payerPanier"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_weight="1"
                android:background="@drawable/border_blue"
                android:gravity="center"
                android:text="@string/payer"
                android:textColor="#FFFFFF" />


            <Button
                android:id="@+id/btn_viderPanier"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_weight="1"
                android:background="@drawable/border_gray"
                android:gravity="center"
                android:text="@string/vider"
                android:textColor="@color/fond" />
    </LinearLayout>
    </LinearLayout>


</LinearLayout>