<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/nav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/barre"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/listNav"
                android:layout_width="38dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:padding="4dp"
                android:src="@drawable/list" />

            <TextView
                android:id="@+id/mainTitle"
                android:layout_width="235dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="12dp"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingLeft="49dp"
                android:text="@string/app_name"
                android:textColor="#FFFFFF"
                android:textSize="28sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/imageProfil"
                android:layout_width="30dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:padding="2dp"
                android:src="@drawable/profil_image" />

            <ImageView
                android:id="@+id/cartNav"
                android:layout_width="30dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:padding="4dp"
                android:src="@drawable/cart" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/nav_elements"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:id="@+id/connexionNav"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/navElement"
                android:paddingLeft="18dp"
                android:paddingTop="4dp"
                android:paddingBottom="4dp"
                android:text="@string/se_connecter"
                android:textColor="#FFFFFF"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/filmsNav"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border"
                android:paddingLeft="18dp"
                android:paddingTop="4dp"
                android:paddingBottom="4dp"
                android:text="@string/se_deconnecter"
                android:textColor="#FFFFFF"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/grignotinesNav"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/navElement"
                android:paddingLeft="18dp"
                android:paddingTop="4dp"
                android:paddingBottom="4dp"
                android:text="@string/grignotines"
                android:textColor="#FFFFFF"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/tarifsNav"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border"
                android:paddingLeft="18dp"
                android:paddingTop="4dp"
                android:paddingBottom="4dp"
                android:text="@string/tarifs"
                android:textColor="#FFFFFF"
                android:textSize="22sp" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>