<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/fond"
    tools:context=".FilmsActivity">



    <include
        android:id="@+id/nav"
        layout="@layout/nav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/titleBG"
                android:gravity="center"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:text="@string/login_title"
                android:textColor="#FFFFFF"
                android:textSize="36dp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="28dp"
                android:layout_marginTop="100dp"
                android:layout_marginRight="28dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/username_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="24dp"
                    android:text="Courriel"
                    android:textColor="#FFFFFF"
                    android:textSize="24dp" />

                <EditText
                    android:id="@+id/username_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:background="@drawable/border_blue"
                    android:ems="10"
                    android:inputType="text"
                    android:paddingLeft="15dp"
                    android:paddingTop="10dp"
                    android:paddingRight="15dp"
                    android:paddingBottom="10dp"
                    android:textColor="#FFFFFF" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="28dp"
                android:layout_marginTop="24dp"
                android:layout_marginRight="28dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/password_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="24dp"
                    android:text="@string/password_label"
                    android:textColor="#FFFFFF"
                    android:textSize="24dp" />

                <EditText
                    android:id="@+id/password_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:background="@drawable/border_blue"
                    android:ems="10"
                    android:inputType="textPassword"
                    android:paddingLeft="15dp"
                    android:paddingTop="10dp"
                    android:paddingRight="15dp"
                    android:paddingBottom="10dp"
                    android:textColor="#FFFFFF" />

            </LinearLayout>

            <Button
                android:id="@+id/login_btn"
                android:layout_width="243dp"
                android:layout_height="42dp"
                android:layout_gravity="center"
                android:layout_marginTop="96dp"
                android:background="@drawable/buttoninscription"
                android:text="@string/login_btn"
                android:textAllCaps="false"
                android:textColor="#FFFFFF"
                android:textSize="24dp"
                android:textStyle="bold"
                app:cornerRadius="10dp" />

            <TextView
                android:id="@+id/forgot_pwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:gravity="center"
                android:text="@string/forgot_pwd"
                android:textColor="#FFFFFF"
                android:textSize="18dp" />

            <TextView
                android:id="@+id/inscriptionTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="9dp"
                android:gravity="center"
                android:text="@string/new_user"
                android:textColor="#FFFFFF"
                android:textSize="18dp" />

        </LinearLayout>
    </ScrollView>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:visibility="invisible" />


</LinearLayout>