<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/fond"
    tools:context=".Film.FilmsActivity">

        <include
            android:id="@+id/nav"
            layout="@layout/nav"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/title"
                    android:layout_width="match_parent"
                    android:layout_height="73dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginBottom="16dp"
                    android:background="@color/fond"
                    android:gravity="center"
                    android:paddingTop="6dp"
                    android:paddingBottom="6dp"
                    android:text="@string/bienvenue"
                    android:textColor="#FFFFFF"
                    android:textSize="42sp"
                    android:textStyle="bold|italic" />

                <TextView
                    android:id="@+id/films_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:background="@color/fond"
                    android:gravity="center"
                    android:paddingTop="6dp"
                    android:paddingBottom="6dp"
                    android:text="@string/films_vedette"
                    android:textColor="#FFFFFF"
                    android:textSize="32sp"
                    android:textStyle="bold" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/filmRecycler"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:padding="25dp"
                    app:spanCount="2" />

                <TextView
                    android:id="@+id/snacks_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/fond"
                    android:gravity="center"
                    android:paddingTop="6dp"
                    android:paddingBottom="6dp"
                    android:text="@string/snacks_vedette"
                    android:textColor="#FFFFFF"
                    android:textSize="32sp"
                    android:textStyle="bold" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/snackRecycler"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:isScrollContainer="false"
                    android:padding="25dp"
                    app:spanCount="2" />

            </LinearLayout>
        </ScrollView>


</LinearLayout>